--- a/livinglotsla/static/css/overrides/bootstrap.less
+++ b/livinglotsla/static/css/overrides/bootstrap.less
@@ -84,4 +84,31 @@ input[type="checkbox"] {
     &-backdrop {
        z-index: 6999;
     }
+
+    &-header {
+        border-bottom: 0;
+    }
+
+    &-content {
+        color: white;
+        background-color: black;
+        border: 0;
+        border-radius: 0;
+    }
+
+    &-title {
+        font-size: 16px;
+        font-family: @header-font-family;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    .close {
+        color: white;
+        opacity: 1;
+
+        &:focus {
+            outline: none;
+        }
+    }
 }
