--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -394,3 +394,10 @@ form {
 
 @import "overrides/bootstrap.less";
 @import "overrides/leaflet.less";
+
+
+/*
+ * Widgets
+ */
+
+@import "widgets/friendlyowners.less";
