--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -342,16 +342,32 @@
                         </a>
                     </span>
 
-                    <table>
+                    {% if lot.steward_projects.count > 0 %}
+                        <div>
+                            {% trans "steward's land tenure" %}:
+                            {{ lot.steward_projects.all.0.land_tenure_status }}
+                        </div>
+                    {% endif %}
 
-                        {% if lot.steward_projects.count > 0 %}
-                        <tr>
-                            <th>{% trans "steward's land tenure" %}:</th>
-                            <td>{{ lot.steward_projects.all.0.land_tenure_status }}</td>
-                        </tr>
-                        {% endif %}
+                    {% if lot.parcel %}
+                        {% with lot.parcel.local_roll as local_roll %}
+                            {% if local_roll %}
+                                <div>
+                                    <span>{% trans "According to the local roll" %}:</span>
+                                    <div>
+                                        {% trans "improvement value" %}: {{ local_roll.improvement_value }}
+                                    </div>   
+                                    <div>
+                                        {% trans "year built" %}: {{ local_roll.yr_built }}
+                                    </div>   
+                                    <div>
+                                        {% trans "built sq ft main" %}: {{ local_roll.built_sq_ft_main }}
+                                    </div>   
+                                </div>   
+                            {% endif %}
+                        {% endwith %}
+                    {% endif %}
 
-                    </table>
                 </div>
             </section>
         {% endif %}
