Add padding to the top of the admin section

--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -331,7 +331,7 @@
         {% endif %}
 
         {% if "lots.view_all_details" in perms %}
-            <section class="admin-only">
+            <section class="lot-detail-admin admin-only">
                 <div class="lot-detail-content">
                     <h2>{% trans "Admin Details" %}</h2>
                     <div class="help-text">(This section is only visible to admins.)</div>
