--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -5154,6 +5154,9 @@ h2.blog-entry-title a {
   list-style: disc outside;
   padding-left: 25px;
 }
+.lot-detail-admin {
+  margin-top: 25px;
+}
 .lot-detail-pathways {
   margin-top: 25px;
 }
