Political Boundaries -> Boundaries

--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -163,7 +163,7 @@
                             </div>
                         </section>
                         <section class="map-filters">
-                            <h3 class="map-filters-expander">{% trans "political boundaries" %}</h3>
+                            <h3 class="map-filters-expander">{% trans "boundaries" %}</h3>
                             <div class="map-filters-content">
                                 <section class="map-filters map-filters-grouped">
                                     <h4 class="map-filters-expander">{% trans "council district" %}</h4>
