"download map as" -> "download lots as"

--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -264,7 +264,7 @@
                 </div>
 
                 <section class="details-buttons hidden-print">
-                    {% trans "download map as" %}
+                    {% trans "download lots as" %}
                     <a href="#" class="export export-csv" data-baseurl="{% url "lots:csv" %}?">
                         {% trans "csv" %}
                     </a> /
