search -> "search blog and site"

--- a/livinglotsla/templates/_footer.html
+++ b/livinglotsla/templates/_footer.html
@@ -27,7 +27,7 @@
 
                 <div class="search">
                     <form action="{% url "watson:search" %}" method="get">
-                        <input type="search" name="q" placeholder="{% trans "search" %}" value="{{ request.GET.q }}" />
+                        <input type="search" name="q" placeholder="{% trans "search blog and site" %}" value="{{ request.GET.q }}" />
                     </form>
                 </div>
 
