--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -112,6 +112,8 @@ header .row {
     font-size: 12px;
     font-style: italic;
     line-height: 40px;
+    overflow-x: hidden;
+    overflow-y: hidden;
     padding-bottom: 5px;
     padding-top: 5px;
     input {
