Try to keep popups from being cut off on top

--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -5394,6 +5394,7 @@ input[type="checkbox"] {
 }
 .leaflet-popup-content-wrapper {
   border-radius: 0;
+  min-height: 300px;
 }
 .leaflet-control-layers-toggle {
   background-image: url(/static/img/layer-switcher.png);
