--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -59,6 +59,7 @@
 
 <div id="map-scrollover">
     <div id="map-scrollover-row">
+        <div id="map-scrollover-handle"></div>
         <div id="map-scrollover-content">
             {% include "livinglots/lots/_scrollover.html" %}
         </div>
