--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -28,6 +28,7 @@
     margin: 0;
     overflow-x: none;
     overflow-y: hidden;
+    padding-bottom: 25px;
     padding-left: 15px;
     padding-right: 20px;
     padding-top: 5px;
