--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -67,6 +67,7 @@
 </div>
 
 <div id="map"
+    data-l-min-zoom="8"
     data-l-zoom="10"
     data-l-center="[34.0248,-118.3255]"
     data-l-scroll-wheel-zoom="false"
