Total count / area above "link to this view"

--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -384,6 +384,7 @@
     .make-md-column(3);
     height: 100%;
     font-weight: bold;
+    line-height: 14px;
     padding-bottom: 25px;
     text-transform: uppercase;
 }
@@ -528,4 +529,9 @@
             
         }
     }
+}
+
+#map-totals {
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
