--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -260,6 +260,11 @@
 
     <div class="map-download-wrapper">
         <div id="map-download" class="map-overlay" data-too-few="{% trans "No lots are on the screen to download. Please adjust your filters or map view before downloading." %}" data-too-many="{% trans "Downloading over 2500 lots is currently not supported. Please adjust your filters or map view before downloading." %}">
+
+            <section id="map-totals">
+                Currently viewing <span id="lots-count"></span> lots on <span id="lots-acres"></span> acres
+            </section>
+
             <div>
                 <a class="details-link" href="#">{% trans "link to this view" %}</a>
             </div>
