--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4814,6 +4814,7 @@ h2.blog-entry-title a {
   padding-right: 15px;
   height: 100%;
   font-weight: bold;
+  line-height: 14px;
   padding-bottom: 25px;
   text-transform: uppercase;
 }
@@ -4970,6 +4971,10 @@ h2.blog-entry-title a {
   font-weight: bold;
   margin-bottom: 15px;
   text-transform: uppercase;
+}
+#map-totals {
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 #lot-detail-map {
   width: 100%;
