--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -132,6 +132,7 @@ header .row {
 .subscribe {
     .make-md-column(3);
     .header-footer-input();
+    .hidden-xs();
 
     @media (max-width: @screen-sm-max) {
         border-top: @frame-border;
