--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4440,22 +4440,32 @@ h2.blog-entry-title a {
 .map-filters-wrapper {
   margin-left: 0;
   margin-right: 0;
+  margin-left: 33.33333333333333%;
   position: relative;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
-  margin-left: 33.33333333333333%;
   height: 100%;
 }
 @media (min-width: 768px) {
+  .map-filters-wrapper {
+    margin-left: 8.333333333333332%;
+  }
+}
+@media (min-width: 992px) {
   .map-filters-wrapper {
     float: left;
     width: 83.33333333333334%;
   }
 }
-@media (min-width: 768px) {
+@media (max-width: 991px) {
   .map-filters-wrapper {
-    margin-left: 8.333333333333332%;
+    margin-left: 0;
+  }
+}
+@media (max-width: 767px) {
+  .map-filters-wrapper {
+    margin-left: 33.3333%;
   }
 }
 .map-filters-inner-wrapper {
