Push leaflet controls to edge on small screens

--- a/livinglotsla/static/css/overrides/leaflet.less
+++ b/livinglotsla/static/css/overrides/leaflet.less
@@ -24,7 +24,7 @@
 
 .leaflet-left {
     margin-left: percentage(1 / @grid-columns);
-    @media (max-width: @screen-xs-max) {
+    @media (max-width: @screen-sm-max) {
         margin-left: 1%;
     }
 }
