Move filters into their own template

--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -1,4 +1,4 @@
-{% load communityplanareas_tags councildistricts_tags feincms_tags i18n inplace_tags neighborhoodcouncils_tags static zoning_tags %}
+{% load feincms_tags i18n inplace_tags %}
 
 <script id="popup-template" type="text/x-handlebars-template">
     {% verbatim %}
@@ -81,167 +81,7 @@
     <div class="map-filters-wrapper">
         <div class="map-filters-inner-wrapper">
             <div id="map-sidebar-parent" class="map-overlay expanded">
-                <section id="map-filters-parent" class="map-filters expanded">
-                    <h2 class="map-filters-expander">{% trans "filter" %}</h2>
-                    <section id="map-filters" class="map-filters-content">
-                        <section class="map-filters expanded">
-                            <h3 class="map-filters-expander">{% trans "land access pathways" %}</h3>
-                            <div class="map-filters-content">
-                                <ul class="map-filters-type">
-                                    <ul>
-                                        <li class="map-filters-type-item map-filters-type-public on">
-                                            <span class="map-filters-type-disc"></span>
-                                            <input type="checkbox" name="public" class="filter filter-layer hidden" checked="true" />
-                                            <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels that are owned by public agencies" %}">
-                                                {% trans "publicly owned vacant" %}
-                                            </span>
-                                            (<span id="public-lots-count"></span>)
-                                        </li>
-                                        <ul>
-                                            <li class="map-filters-type-item map-filters-type-public-sidelot on">
-                                                <span class="map-filters-type-disc"></span>
-                                                <input type="checkbox" name="public_sidelot" class="filter filter-layer hidden" checked="true" />
-                                                <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels that are part of the city's side yard program" %}">
-                                                    {% trans "side yard" %}
-                                                </span>
-                                                (<span id="public-sidelot-count"></span>)
-                                            </li>
-                                        </ul>
-                                    </ul>
-                                    <ul>
-                                        <li class="map-filters-type-item map-filters-type-private on">
-                                            <span class="map-filters-type-disc"></span>
-                                            <input type="checkbox" name="private" class="filter filter-layer hidden" checked="true" />
-                                            <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels that are owned by private entities" %}">
-                                                {% trans "privately owned vacant" %}
-                                            </span>
-                                            (<span id="private-lots-count"></span>)
-                                        </li>
-                                    </ul>
-                                    <ul>
-                                        <li class="map-filters-type-item map-filters-type-in-use on">
-                                            <span class="map-filters-type-disc"></span>
-                                            <input type="checkbox" name="in_use" class="filter filter-layer hidden" />
-                                            {% trans "green space" %}
-                                            (<span id="in-use-count"></span>)
-                                        </li>
-                                        <li class="map-filters-type-item map-filters-type-organized on">
-                                            <span class="map-filters-type-disc"></span>
-                                            <input type="checkbox" name="organized" class="filter filter-layer hidden" />
-                                            <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels that people are organizing to get access to" %}">
-                                                {% trans "being organized" %}
-                                            </span>
-                                            (<span id="organized-count">0</span>)
-                                        </li>
-                                        <li class="map-filters-type-item map-filters-type-friendly-owner on">
-                                            <span class="map-filters-type-disc"></span>
-                                            <input type="checkbox" name="friendly_owner" class="filter filter-layer hidden" />
-                                            <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels with friendly owners who might be more open to giving you access to them" %}">
-                                                {% trans "friendly owner" %}
-                                            </span>
-                                            (<span id="friendly-owner-count">0</span>)
-                                            <div>
-                                                <a class="friendly-owner-share" href="{% url "friendlyowners:add" %}" data-target="#friendlyowner-modal" data-toggle="modal">
-                                                    {% trans "I own land I'd like to share" %}
-                                                </a>
-                                        </li>
-                                    </ul>
-                                </ul>
-                            </div>
-                        </section>
-                        <section class="map-filters expanded">
-                            <h3 class="map-filters-expander">{% trans "search" %}</h3>
-                            <div class="map-filters-content">
-                                <form class="map-filters-search-form" data-bounds="[-117.5359,33.5391,-118.8872,34.5733]" data-city="Los Angeles" data-state="CA" data-error-message="{% trans "Could not find your location. Try again?" %}" data-warning-selector=".map-filters-search.warning">
-                                    <input id="map-filters-search" class="map-filters-search" type="search" placeholder="{% trans "address, intersection, zip" %}" />
-                                    <div class="warning" style="display: none;"></div>
-                                    <input id="map-filters-search-lat" type="hidden" />
-                                    <input id="map-filters-search-lng" type="hidden" />
-                                    <div class="map-filters-search-nearby">
-                                        <input id="map-filters-search-nearby" name="map-filters-search-nearby" type="checkbox" />
-                                        <label for="map-filters-search-nearby">{% trans "Show only lots within 1/2 mile" %}</label>
-                                    </div>
-                                </form>
-                            </div>
-                        </section>
-                        <section class="map-filters">
-                            <h3 class="map-filters-expander">{% trans "boundaries" %}</h3>
-                            <div class="map-filters-content">
-                                <section class="map-filters map-filters-grouped">
-                                    <h4 class="map-filters-expander">{% trans "council district" %}</h4>
-                                    <div class="map-filters-content">
-                                        <div class="map-filters-councildistricts">
-                                            {% get_council_districts as councildistricts %}
-                                            {% for councildistrict in councildistricts %}
-                                            
-                                                <a href="#" class="map-filters-councildistrict pull-left" data-label="{{ councildistrict.label }}" data-type="councildistricts">
-                                                    {{ councildistrict.label }} 
-                                                </a>
-                                            {% endfor %}
-                                            <div class="clearfix"></div>
-                                        </div>
-                                    </div>
-                                </section>
-                                <section class="map-filters map-filters-grouped">
-                                    <h4 class="map-filters-expander">{% trans "neighborhood council area" %}</h4>
-                                    <div class="map-filters-content">
-                                        <select class="map-filters-neighborhoodcouncils" data-type="neighborhoodcouncils">
-                                            <option value="">Pick one</option>
-                                            {% get_neighborhood_councils as neighborhoodcouncils %}
-                                            {% for neighborhoodcouncil in neighborhoodcouncils %}
-                                                <option value="{{ neighborhoodcouncil.label }}">
-                                                    {{ neighborhoodcouncil.label }} 
-                                                </option>
-                                            {% endfor %}
-                                        </select>
-                                    </div>
-                                </section>
-                                <section class="map-filters map-filters-grouped">
-                                    <h4 class="map-filters-expander">{% trans "community plan area" %}</h4>
-                                    <div class="map-filters-content">
-                                        <select class="map-filters-communityplanareas" data-type="communityplanareas">
-                                            <option value="">Pick one</option>
-                                            {% get_community_plan_areas as communityplanareas %}
-                                            {% for communityplanarea in communityplanareas %}
-                                                <option value="{{ communityplanarea.label }}">
-                                                    {{ communityplanarea.label }} 
-                                                </option>
-                                            {% endfor %}
-                                        </select>
-                                    </div>
-                                </section>
-                                <section class="map-filters map-filters-grouped">
-                                    <h4 class="map-filters-expander">{% trans "zoning code" %}</h4>
-                                    <div class="map-filters-content">
-                                        <select class="filter map-filters-zoneclasses">
-                                            <option value="">Pick one</option>
-                                            {% get_zoning_classes as zone_classes %}
-                                            {% for group, classes in zone_classes.items %}
-                                                <optgroup label="{{ group }}">
-                                                    {% for class in classes %}
-                                                        <option>{{ class }}</option>
-                                                    {% endfor %}
-                                                </optgroup>
-                                            {% endfor %}
-                                        </select>
-                                    </div>
-                                </section>
-                            </div>
-                        </section>
-                        <section class="map-filters expanded">
-                            <h3 class="map-filters-expander">{% trans "size" %}</h3>
-                            <div class="map-filters-content">
-                                <div class="filter filter-size"></div>
-                                <div class="filter-size-labels">
-                                    <span class="filter-size-label-min"></span>
-                                    <span class="filter-size-label-max"></span>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </div>
-                        </section>
-                    </section>
-                </section>
-
+                {% include "livinglots/lots/_filters.html" %}
 
                 {% if "lot.add_lot" in perms %}
                     <section id="map-admin-parent" class="map-filters">
