--- a/livinglotsla/templates/livinglots/lots/_filters.html
+++ b/livinglotsla/templates/livinglots/lots/_filters.html
@@ -7,64 +7,65 @@
             <h3 class="map-filters-expander">{% trans "land access pathways" %}</h3>
             <div class="map-filters-content">
                 <ul class="map-filters-type">
+                    <li class="map-filters-type-item map-filters-type-public on">
+                        <span class="map-filters-type-disc"></span>
+                        <input type="checkbox" name="public" class="filter filter-layer hidden" checked="true" />
+                        <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels that are owned by public agencies" %}">
+                            {% trans "publicly owned vacant" %}
+                        </span>
+                        (<span id="public-lots-count"></span>)
+                    </li>
                     <ul>
-                        <li class="map-filters-type-item map-filters-type-public on">
+                        <li class="map-filters-type-item map-filters-type-public-sidelot on">
                             <span class="map-filters-type-disc"></span>
-                            <input type="checkbox" name="public" class="filter filter-layer hidden" checked="true" />
-                            <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels that are owned by public agencies" %}">
-                                {% trans "publicly owned vacant" %}
+                            <input type="checkbox" name="public_sidelot" class="filter filter-layer hidden" checked="true" />
+                            <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels that are part of the city's side yard program" %}">
+                                {% trans "side yard" %}
                             </span>
-                            (<span id="public-lots-count"></span>)
-                        </li>
-                        <ul>
-                            <li class="map-filters-type-item map-filters-type-public-sidelot on">
-                                <span class="map-filters-type-disc"></span>
-                                <input type="checkbox" name="public_sidelot" class="filter filter-layer hidden" checked="true" />
-                                <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels that are part of the city's side yard program" %}">
-                                    {% trans "side yard" %}
-                                </span>
-                                (<span id="public-sidelot-count"></span>)
-                            </li>
-                        </ul>
-                    </ul>
-                    <ul>
-                        <li class="map-filters-type-item map-filters-type-private on">
-                            <span class="map-filters-type-disc"></span>
-                            <input type="checkbox" name="private" class="filter filter-layer hidden" checked="true" />
-                            <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels that are owned by private entities" %}">
-                                {% trans "privately owned vacant" %}
-                            </span>
-                            (<span id="private-lots-count"></span>)
+                            (<span id="public-sidelot-count"></span>)
                         </li>
                     </ul>
-                    <ul>
-                        <li class="map-filters-type-item map-filters-type-in-use on">
-                            <span class="map-filters-type-disc"></span>
-                            <input type="checkbox" name="in_use" class="filter filter-layer hidden" />
-                            {% trans "green space" %}
-                            (<span id="in-use-count"></span>)
-                        </li>
-                        <li class="map-filters-type-item map-filters-type-organized on">
-                            <span class="map-filters-type-disc"></span>
-                            <input type="checkbox" name="organized" class="filter filter-layer hidden" />
-                            <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels that people are organizing to get access to" %}">
-                                {% trans "being organized" %}
-                            </span>
-                            (<span id="organized-count">0</span>)
-                        </li>
-                        <li class="map-filters-type-item map-filters-type-friendly-owner on">
-                            <span class="map-filters-type-disc"></span>
-                            <input type="checkbox" name="friendly_owner" class="filter filter-layer hidden" />
-                            <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels with friendly owners who might be more open to giving you access to them" %}">
-                                {% trans "friendly owner" %}
-                            </span>
-                            (<span id="friendly-owner-count">0</span>)
-                            <div>
-                                <a class="friendly-owner-share" href="{% url "friendlyowners:add" %}" data-target="#friendlyowner-modal" data-toggle="modal">
-                                    {% trans "I own land I'd like to share" %}
-                                </a>
-                        </li>
-                    </ul>
+                    <li class="map-filters-type-item map-filters-type-private on">
+                        <span class="map-filters-type-disc"></span>
+                        <input type="checkbox" name="private" class="filter filter-layer hidden" checked="true" />
+                        <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels that are owned by private entities" %}">
+                            {% trans "privately owned vacant" %}
+                        </span>
+                        (<span id="private-lots-count"></span>)
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="map-filters expanded">
+            <h3 class="map-filters-expander">{% trans "living lots" %}</h3>
+            <div class="map-filters-content">
+                <ul class="map-filters-type">
+                    <li class="map-filters-type-item map-filters-type-in-use on">
+                        <span class="map-filters-type-disc"></span>
+                        <input type="checkbox" name="in_use" class="filter filter-layer hidden" />
+                        {% trans "green space" %}
+                        (<span id="in-use-count"></span>)
+                    </li>
+                    <li class="map-filters-type-item map-filters-type-organized on">
+                        <span class="map-filters-type-disc"></span>
+                        <input type="checkbox" name="organized" class="filter filter-layer hidden" />
+                        <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels that people are organizing to get access to" %}">
+                            {% trans "being organized" %}
+                        </span>
+                        (<span id="organized-count">0</span>)
+                    </li>
+                    <li class="map-filters-type-item map-filters-type-friendly-owner on">
+                        <span class="map-filters-type-disc"></span>
+                        <input type="checkbox" name="friendly_owner" class="filter filter-layer hidden" />
+                        <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Parcels with friendly owners who might be more open to giving you access to them" %}">
+                            {% trans "friendly owner" %}
+                        </span>
+                        (<span id="friendly-owner-count">0</span>)
+                        <div>
+                            <a class="friendly-owner-share" href="{% url "friendlyowners:add" %}" data-target="#friendlyowner-modal" data-toggle="modal">
+                                {% trans "I own land I'd like to share" %}
+                            </a>
+                    </li>
                 </ul>
             </div>
         </section>
