--- a/livinglotsla/templates/livinglots/groundtruth/add_groundtruthrecord.html
+++ b/livinglotsla/templates/livinglots/groundtruth/add_groundtruthrecord.html
@@ -7,6 +7,16 @@
 {% endblock %}
 
 {% block modal_body %}
+    <p>
+        <strong>
+            {% blocktrans %}
+                Streetview and aerial imagery are often out of date. Please be
+                sure that this lot isn't actually vacant before making this
+                correction.
+            {% endblocktrans %}
+        </strong>
+    </p>
+
     {% url "groundtruth:add_groundtruthrecord" pk=content_object.pk as action_url %}
     <form class="form-horizontal" method="post" 
         {% if action_url %}action="{{ action_url }}"{% endif %}
